--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -3,7 +3,11 @@
 @forward '../css/elegentfonts.css';
 @forward '../css/font-awesome-pro.css';
 @forward '../css/animate.css';
-
+@forward '../css/App.css';
+@forward '../css/Sidebar.css';
+@forward '../css/MainDash.css';
+@forward '../css/Cards.css';
+@forward '../css/Card.css';
 
 @forward 'components/theme';
 @forward 'components/background';
