--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -8,6 +8,9 @@
 @forward '../css/MainDash.css';
 @forward '../css/Cards.css';
 @forward '../css/Card.css';
+@forward '../css/Table.css';
+@forward '../css/RightSide.css';
+@forward '../css/Updates.css';
 
 @forward 'components/theme';
 @forward 'components/background';
