add profile template

--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -11,6 +11,7 @@
 @forward '../css/Table.css';
 @forward '../css/RightSide.css';
 @forward '../css/Updates.css';
+@forward '../css/Settings.css';
 
 @forward 'components/theme';
 @forward 'components/background';
