--- a/public/assets/css/App.css
+++ b/public/assets/css/App.css
@@ -35,7 +35,7 @@
   background: var(--glass);
   border-radius: 2rem;
   gap: 16px;
-  grid-template-columns: 11rem auto 20rem;
+  grid-template-rows: 11rem auto 20rem;
   overflow: hidden;
   overflow-y: scroll;
 }
