--- a/public/assets/css/Sidebar.css
+++ b/public/assets/css/Sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     position: relative;
     padding-top: 4rem;
     transition: all 300ms ease;
@@ -33,7 +33,7 @@
   .menu {
     margin-top: 4rem;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 2rem;
   }
   .menuItem {
