completed dashboard form, setting-form, incomplete calling api

--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -12,6 +12,8 @@
 @forward '../css/RightSide.css';
 @forward '../css/Updates.css';
 @forward '../css/Settings.css';
+@forward '../css/User.css';
+
 
 @forward 'components/theme';
 @forward 'components/background';
