--- a/public/assets/css/Settings.css
+++ b/public/assets/css/Settings.css
@@ -1,101 +1,108 @@
 .settings {
-    display: flex;
-  }
-  
-  .settingsWrapper {
-    flex: 9;
-    padding: 20px;
-  }
-  
-  .settingsTitle {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .settingsTitleUpdate {
-    font-size: 30px;
-    margin-bottom: 20px;
-    color: lightcoral;
-  }
-  
-  .settingsTitleDelete {
-    color: red;
-    font-size: 12px;
-    cursor: pointer;
-  }
-  
-  .settingsForm {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .settingsPP {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  
-  .settingsPP > img {
-    height: 70px;
-    width: 70px;
-    border-radius: 20px;
-    object-fit: cover;
-  }
-  
-  .settingsPPIcon {
-    width: 25px;
-    height: 25px;
-    padding: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    border-radius: 50%;
-    margin-left: 10px;
-    color: white;
-    background-color: lightcoral;
-    cursor: pointer;
-  }
-  
-  .settingsPPButton:focus {
-    outline-style: none;
-  }
-  
-  .settingsForm > label {
-    font-size: 20px;
-    margin-top: 20px;
-  }
-  
-  .settingsPPInput {
-    width: 30%;
-  }
-  
-  .settingsForm > input {
-    color: gray;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    height: 30px;
-    border: none;
-    border-bottom: 1px solid lightgray;
-  }
-  
-  .settingsSubmitButton {
-    align-self: center;
-    width: 150px;
-    border: none;
-    border-radius: 10px;
-    color: white;
-    background-color: teal;
-    padding: 10px;
-    margin-top: 20px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .settingsSubmitButton:hover {
-    background-color: rgb(1, 114, 114);
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.settingsWrapper {
+  width: 70%;
+  padding: 20px;
+  background-color: #f2f2f2;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.settingsTitle {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.settingsTitleUpdate {
+  font-size: 24px;
+  color: #ff6b6b;
+  font-weight: bold;
+}
+
+.settingsTitleDelete {
+  font-size: 16px;
+  color: #ff6b6b;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.settingsForm {
+  display: flex;
+  flex-direction: column;
+}
+
+.settingsPP {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.settingsPP > img {
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.settingsPPIcon {
+  width: 25px;
+  height: 25px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 50%;
+  margin-left: 10px;
+  color: white;
+  background-color: #ff6b6b;
+  cursor: pointer;
+}
+
+.settingsPPInput {
+  display: none;
+}
+
+.settingsForm > label {
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+.settingsForm > input {
+  font-size: 14px;
+  color: #333;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  height: 30px;
+  border: none;
+  border-bottom: 1px solid lightgray;
+}
+
+.settingsSubmitButton {
+  align-self: center;
+  width: 150px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  background-color: #00adb5;
+  padding: 10px;
+  margin-top: 20px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.settingsSubmitButton:hover {
+  background-color: #007d7d;
+}
