--- a/public/assets/css/App.css
+++ b/public/assets/css/App.css
@@ -37,12 +37,11 @@
   gap: 16px;
   grid-template-rows: 11rem auto 20rem;
   overflow: hidden;
-  overflow-y: scroll;
 }
 
 @media screen and (max-width: 1200px) {
   .AppGlass{
-    grid-template-columns: 10% 50% auto;
+    grid-template-columns: 100%;
     overflow-y: scroll;
   } 
 }
