--- a/public/assets/css/MainDash.css
+++ b/public/assets/css/MainDash.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    padding-right: 20px;
 }
 
 @media screen and (max-width: 1200px) {
