--- a/public/assets/css/Sidebar.css
+++ b/public/assets/css/Sidebar.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   position: relative;
   padding-top: 4rem;
+  
 }
 
 /* logo */
@@ -33,24 +34,21 @@
 .menu {
   margin-top: 4rem;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 2rem;
-  align-items: center;
-  justify-content: center;
+  padding-right: 20px;
 }
 
 .menuItem {
   display: flex;
   align-items: center;
-  justify-content: center;
+  gap: 1rem;
   height: 2.5rem;
-  width: 160px;
   margin-left: 2rem;
   position: relative;
-  transition: background 300ms ease;
+  transition: all 300ms ease;
   border-radius: 0.7rem;
   font-size: 14px;
-  text-align: center;
 }
 
 
@@ -65,8 +63,10 @@
 
 .active::before {
   content: "";
-  width: 20px;
+  width: 8px;
   height: 100%;
+  background: var(--pink);
+  margin-right: calc(1rem - 8px);
 }
 
 /* Tablets */
@@ -111,4 +111,11 @@
   .close {
     left: -60%;
   }
+}
+.columnView{
+  display: flex;
+}
+.content {
+  flex-grow: 1;
+  overflow-y: auto;
 }
