--- a/public/assets/css/Sidebar.css
+++ b/public/assets/css/Sidebar.css
@@ -19,6 +19,7 @@
   gap: 1rem;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .logo > span > span {
@@ -74,13 +75,10 @@
   .menuItem > span {
     display: none;
   }
-  .logo {
-    display: none;
-  }
 }
 
 @media screen and (max-width: 768px) {
-  .sidebar {
+  .sidebar{
     position: fixed;
     z-index: 9;
     background: #ffe0e0;
@@ -88,27 +86,20 @@
     padding-right: 1rem;
     height: 100%;
   }
-  .menuItem > span {
+  .menuItem>span{
     display: block;
   }
-  .logo {
-    display: flex;
-  }
-  .menu .menuItem:last-child {
-    position: relative;
-    margin-top: 6rem;
-  }
-  .bars {
+  .bars{
     display: flex;
     position: fixed;
     top: 2rem;
-    left: 60%;
-    background: #ffe0e0;
-    padding: 10px;
+    left:60%;
+    background:#ffe0e0;
+    padding:10px;
     border-radius: 10px;
     z-index: 9;
   }
-  .close {
+  .close{
     left: -60%;
   }
 }
