--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -13,7 +13,7 @@
 @forward '../css/Updates.css';
 @forward '../css/Settings.css';
 @forward '../css/User.css';
-
+@forward '../css/staffDash.css';
 
 @forward 'components/theme';
 @forward 'components/background';
