--- a/public/assets/css/MainDash.css
+++ b/public/assets/css/MainDash.css
@@ -8,13 +8,14 @@
 @media screen and (max-width: 1200px) {
     .MainDash{
         justify-content:flex-start;
-        margin-top: 2rem;
+        padding-left: 20px;
     }
 }
 
 @media screen and (max-width: 768px)
 {
     .MainDash{
-        align-items: center;
+        justify-content: center;
+        align-items: normal;
     }
 }
