--- a/public/assets/css/Table.css
+++ b/public/assets/css/Table.css
@@ -1,7 +1,10 @@
 .MuiTableRow-root > * {
     padding: 10px;
   }
-  
+  .dataTable{
+    padding-right: 20px;
+    width: auto;
+  }
   .MuiTableRow-root.MuiTableRow-head > * {
     font-weight: bold !important;
   }
@@ -32,6 +35,9 @@
       border-radius: 1rem;
 
     }
+    .dataTable{
+      width: 100%;
+    }
   }
   
   
@@ -41,9 +47,12 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 23rem;
+      width: 100%;
       border-radius: 1rem;
 
+    }
+    .dataTable{
+      width: 100%;
     }
   }
   .chart-container{
