--- a/public/assets/css/Sidebar.css
+++ b/public/assets/css/Sidebar.css
@@ -16,7 +16,7 @@
   height: 5rem;
   font-weight: bold;
   font-size: 22px;
-  gap: 1rem;
+
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -24,11 +24,14 @@
 
 /* menu */
 .menu {
-  margin-top: 4rem;
+  background-color:rgb(235 179 192 / 34%);
   display: flex;
   flex-direction: column;
   gap: 2rem;
   padding-right: 20px;
+  padding-top: 10px;
+  margin-right: 15px;
+  
 }
 
 .menuItem {
@@ -86,6 +89,7 @@
     height: 100%;
     
   }
+
   .menuItem>span{
     display: block;
   }
@@ -101,8 +105,8 @@
   }
   .menu{
     position: fixed;
-    z-index: 9;
-    background: #ffe0e0;
+    z-index: 10;
+    background:rgb(235 179 192);
     width: 55%;
     padding-right: 1rem;
     height: 100%;
@@ -121,8 +125,10 @@
 }
 .columnView{
   display: flex;
+  height: 100%;
 }
 .content {
+  overflow-x: auto;
   flex-grow: 1;
-  overflow-y: auto;
+  overflow-y: hidden;
 }
