--- a/public/assets/scss/layout/_blog.scss
+++ b/public/assets/scss/layout/_blog.scss
@@ -186,6 +186,14 @@
         @media #{$lg,$md,$xs} {
             padding-right: 0;
         }
+        .notification {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            opacity: 0.7;
+        }
     }
     &__thumb{
         & .play-btn{
