--- a/public/assets/scss/layout/_header.scss
+++ b/public/assets/scss/layout/_header.scss
@@ -58,20 +58,22 @@
     &__search {
         &-input {
             position: relative;
-            & input {
-                width: 200px;
+            width: 100%;
+            .ant-select {
                 height: 50px;
-                background-color: var(--tp-grey-1);
-                border: 1px solid var(--tp-grey-1);
-                padding: 0 20px;
-                padding-left: 40px;
-                border-radius: 50px;
-                @include tp-placeholder {
-                    color: var(--tp-text-3);
-                }
-                &::placeholder {
-                    font-size:16px;
-                    color: var(--tp-text-2);
+                .ant-select-selector {
+                    width: 100%;
+                    height: 100%;
+                    background-color: var(--tp-grey-1);
+                    border: 10px solid var(--tp-grey-1);
+                    border-color: transparent !important;
+                    padding: 0 20px;
+                    padding-left: 60px;
+                    border-radius: 50px;
+                    .ant-select-selection-search-input {
+                        padding-left: 40px;
+                        font-size: 1rem;
+                    }
                 }
             }
         }
