--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -50470,22 +50470,24 @@ img {
 }
 .header__search-input {
   position: relative;
+  width: 100%;
 }
-.header__search-input input {
-  width: 200px;
+.header__search-input .ant-select {
   height: 50px;
+}
+.header__search-input .ant-select .ant-select-selector {
+  width: 100%;
+  height: 100%;
   background-color: var(--tp-grey-1);
-  border: 1px solid var(--tp-grey-1);
+  border: 10px solid var(--tp-grey-1);
+  border-color: transparent !important;
   padding: 0 20px;
-  padding-left: 40px;
+  padding-left: 60px;
   border-radius: 50px;
 }
-.header__search-input input::-moz-placeholder {
-  color: var(--tp-text-3);
-}
-.header__search-input input::placeholder {
-  font-size: 16px;
-  color: var(--tp-text-2);
+.header__search-input .ant-select .ant-select-selector .ant-select-selection-search-input {
+  padding-left: 40px;
+  font-size: 1rem;
 }
 .header__search-btn {
   position: absolute;
