update popup login update top instructor update avatar author

--- a/public/assets/scss/components/_buttons.scss
+++ b/public/assets/scss/components/_buttons.scss
@@ -1,7 +1,14 @@
 @use '../utils' as *;
 
 /* pulse btn */
+.custom-dropdown-toggle::after {
+	display: none;
+  }
 
+.dropdown-menu {
+	animation: dropdownFadeIn 0.5s ease-in-out ;
+}
+  
 .pulse-btn{
 	display: inline-block;
 	width: 80px;
