--- a/public/assets/scss/components/_animation.scss
+++ b/public/assets/scss/components/_animation.scss
@@ -78,3 +78,14 @@
         transform: translateX(0px);
     }
 }
+
+@keyframes dropdownFadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(5);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(10);
+    }
+  }
