--- a/public/assets/css/Table.css
+++ b/public/assets/css/Table.css
@@ -66,58 +66,33 @@ th {
   width: 32%;
   flex: 1;
 }
-.newReportForm {
-  margin-top: 50px;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
 
-.newReportForm h4 {
+.report-students {
+  text-align: center;
   margin-bottom: 20px;
 }
 
-.newReportForm label {
-  display: block;
-  margin-bottom: 10px;
+.title {
+  font-size: 24px;
   font-weight: bold;
 }
 
-.newReportForm input,
-.newReportForm textarea {
+.report-table {
   width: 100%;
+  border-collapse: collapse;
+}
+
+.student-id, .course-id, .message, .image {
   padding: 10px;
-  margin-bottom: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-sizing: border-box;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
 }
 
-.newReportForm button {
-  display: block;
-  margin-top: 20px;
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+.student-id {
+  background-color: #f2f2f2;
 }
 
-.newReportForm button:hover {
-  background-color: #0069d9;
-}
-
-button {
-  padding: 5px 10px;
-  background-color: #28a745;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #218838;
+.report-image {
+  max-width: 100%;
+  height: auto;
 }
