fix UI, api manage course of instructor

--- a/public/assets/scss/layout/_course.scss
+++ b/public/assets/scss/layout/_course.scss
@@ -4,6 +4,10 @@
 /*  08. COURSE CSS START
 /*----------------------------------------*/
 
+.ant-modal-custom {
+    width: 90% !important;
+}
+
 .course-menu {
     & span {
         font-size: 20px;
