--- a/public/assets/css/App.css
+++ b/public/assets/css/App.css
@@ -33,7 +33,7 @@
   min-height: 100vh;
 }
 
-.AppGlass {
+/* .AppGlass {
   display: grid;
   height: 97vh;
   width: 97vw;
@@ -41,7 +41,7 @@
   border-radius: 2rem;
   gap: 16px;
   overflow-y: scroll;
-}
+} */
 .AppGlass::-webkit-scrollbar{
   display: none;
 }
