--- a/public/assets/scss/layout/_instructor.scss
+++ b/public/assets/scss/layout/_instructor.scss
@@ -3,7 +3,9 @@
 /*----------------------------------------*/
 /*  11. INSTRUCTOR CSS START
 /*----------------------------------------*/
-
+.ArtworkModal{
+    width: 1440px !important;
+}
 .tp-instructor {
     border: 1px solid rgb(119, 124, 144, .1);
     padding: 20px 20px 22px;
