--- a/public/assets/css/Cards.css
+++ b/public/assets/css/Cards.css
@@ -1,17 +1,22 @@
 .Cards {
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
   }
   .parentContainer{
-    width: 100%;
+    width: 18.5%;
   }
   
   @media screen and (max-width: 1200px) {
-    .Cards{
-      flex-direction: column;
-    }
     .parentContainer{
       height: 9rem;
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    .parentContainer{
+      width: 168px;
+      margin-left: 1rem;
     }
   }
   
