--- a/public/assets/css/Sidebar.css
+++ b/public/assets/css/Sidebar.css
@@ -31,7 +31,9 @@
   padding-right: 20px;
   padding-top: 10px;
   margin-right: 15px;
-  
+  width: 18%;
+  height: 100vh;
+  position: fixed;
 }
 
 .menuItem {
@@ -125,11 +127,10 @@
 }
 .columnView{
   display: flex;
-  height: 100vh;
   width: 100vw;
 }
 .content {
-  overflow-x: auto;
+  width: 82%;
   flex-grow: 1;
-  overflow-y: hidden;
+  margin-left: 20%;
 }
