--- a/public/assets/scss/main.css
+++ b/public/assets/scss/main.css
@@ -50014,6 +50014,10 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 
+.primary-drawing.ant-tag-checkable-checked {
+  background-color: #245D51;
+}
+
 .section-title p {
   margin-bottom: 0;
   line-height: 28px;
