--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -14,6 +14,7 @@
 @forward '../css/Settings.css';
 @forward '../css/User.css';
 @forward '../css/staffDash.css';
+@forward '../css/TextEditor.css';
 
 @forward 'components/theme';
 @forward 'components/background';
